fix event cal content overflowing grid

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_event-calendar.scss
@@ -31,6 +31,12 @@
     @include xy-gutters($negative:true);
   }
 
+  > * {
+    @include breakpoint(large) {
+      @include xy-cell(12);
+    }
+  }
+
   form.searchandfilter {
 
     #switch-archive-view {
